# bank-statement-converter

./: .gitignore  LICENSE  pyproject.toml  readme.md
notebooks/: access-extract.ipynb  fbn-extract.ipynb  opay-extract.ipynb  providus-extract.ipynb  sc-extract.ipynb  zenith-extract.ipynb
