[project]
name = "bank-statement-converter"
version = "0.1.0"
description = "A collection of tools to convert Nigerian bank statements in pdf format into a structured format."
requires-python = ">=3.12"
dependencies = [
    "camelot-py>=1.0.0",
    "ipywidgets>=8.1.7",
    "notebook>=7.4.3",
    "numpy<2.0",
    "torch==2.2.2",
    "torchvision==0.17.2",
]
